Opened 16 years ago
Closed 15 years ago
#3419 closed bug (fixed)
Fail-safe video mode not respecting /boot/home/config/settings/kernel/drivers/vesa or bootman's fail-safe video mode options
Reported by: | anarchos | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
If the "Use fail-safe video mode" is selected during boot and the "Fail-safe video mode" is set to "default", the file /boot/home/config/settings/kernel/drivers/vesa should set the resolution and mode. This happens during boot (the haiku logo and icons) but Haiku then reverts back to whatever resolution and mode are set to in the screen preference app once the desktop loads.
The same behavior happens even if the fail-safe video mode is set to something specific, not default.
Not tested on real hardware. Qemu w/ the pre-alpha 29172 image.
Change History (2)
comment:1 by , 15 years ago
Component: | Preferences/Screen → Drivers/Graphics |
---|
comment:2 by , 15 years ago
Component: | Drivers/Graphics → Servers/app_server |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev32182 (it's only an app_server thing now).
That's actually a problem of either the app_server of the VESA accelerant not respecting the safemode setting. The problem was introduced with the VESA mode setting code.