* This lets the app_server respect the boot loader's fail-safe video mode   setting again. It still allows you to change the mode afterwards, though. * This fixes bug #3419.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32182 a95241bf-73f2-0310-859d-f6bbb57e9c96